# gto-wizard-clone-v2

./: .gitignore  AGENTS.md  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/api/: main.py  variants.py
apps/api/models/: annotations.py  study_progress.py
apps/api/routers/: annotations.py  courses.py  equity.py  export.py  hh.py  quiz.py  solver.py  study_progress.py  suggest.py
apps/api/services/: cache.py  database.py  strategy_storage.py
apps/api/tests/: test_node_locking.py  test_solver_api.py  test_study_progress.py
apps/web/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analyze/: page.tsx
apps/web/src/app/courses/: page.tsx
apps/web/src/app/equity/: page.tsx
apps/web/src/app/icm/: page.tsx
apps/web/src/app/plo4/: page.tsx
apps/web/src/app/practice/: page.tsx
apps/web/src/app/strategies/: page.tsx
apps/web/src/app/study/: page.tsx
apps/web/src/components/layout/: NavBar.tsx
apps/web/src/components/study/: AggregateFlipStrip.tsx  (+7 more)
apps/web/src/hooks/: useAggregateStats.ts
apps/web/src/lib/: tokens.ts
apps/web/tests/: aggregate-flip-strip.spec.ts  postflop-range.spec.ts  study-action-flow.spec.ts
docs/: aggregate-flip-strip-workflow.md  reference-comparison-gtowizard.md  reference-study-interaction-spec.md  session-0-audit-report.md  study-page-spec.md
infra/docker/: Dockerfile.api  Dockerfile.solver  Dockerfile.web
